data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1886.wast
;; 7. **Test Case 7**:    - **Description**: Construct a sequence where multiple `br_if` instructions are used within a `loop` and the operand types are deliberately interchanged (`i32` and `i64`). Ensure `br_if` jumps based on the wrong operand type.    - **Constraint**: Checks the handling of operand stacks and verifies that type mismatches are correctly flagged when a `br_if` targets a `loop`.

(assert_invalid
  (module
    (func $type-mismatch-br_if-loop
      (block (loop
        (i64.const 1)
        (br_if 0 (i32.const 1))  ;; This should cause a type mismatch
        (i32.const 0)
      ))
    )
  )
  "type mismatch"
)